--- a/scripts/grid_search_cv.ipynb
+++ b/scripts/grid_search_cv.ipynb
@@ -49,7 +49,7 @@
     "    'max_iter': (1000, 2000)\n",
     "}\n",
     "\n",
-    "results = grid_search_cv(logistic_model, dataset, hyperparameter_grid=parameter_grid, cv=3)\n",
+    "results = grid_search_cv(logistic_model, breast_data, hyperparameter_grid=parameter_grid, cv=3)\n",
     "\n",
     "print(\"Grid Search Cross-Validation Results:\")\n",
     "print(results)\n",
